--- a/config/database.yml
+++ b/config/database.yml
@@ -11,15 +11,15 @@ default: &default
 
 development:
   <<: *default
-  database: forgeddit_development
+  database: forgeddit-development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: forgeddit_test
+  database: forgeddit-test
 
 production:
   <<: *default
-  database: forgeddit_production
+  database: forgeddit-production
